libs/@local/hashql/hir/tests/ui/lower/specialization/collect-custom-collect.jsonc
//@ run: fail
//@ description: Test minimal graph specialization
[
  "::graph::tail::collect",
  [
    ["fn", { "#tuple": [] }, { "#struct": { "graph": "_" } }, "_", "graph"],
    //~^ ERROR This is not a graph intrinsic operation
    ["::graph::head::entities", ["::graph::tmp::decision_time_now"]]
  ]
]
